# Stellarator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  RL_TOOL_GAP_ANALYSIS.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: load-regression.yml  test.yml
backend/: .env.example  SCHEMA.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: README.md  __init__.py  rotate_secret.py
backend/tests/: conftest.py  test_chat.py  test_chat_resume.py  test_cost.py  test_crypto.py  test_drivers.py  test_handoff_errors.py  test_integrations.py  test_ml_intern_loop.py  test_notifications.py  test_oauth_replay.py  test_openai_oauth.py  test_openrouter.py  test_persistence.py  test_promote.py  test_r3_fixes.py  test_r5_polish.py  test_reconcile_backoff.py  test_reconcile_untrack.py  test_redaction.py  test_research.py  test_rl_parity.py  test_runs.py  test_security.py  test_security_extras.py  test_ws_semaphore.py
docker/: README.md  backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile  prometheus.yml  supervisor.Dockerfile
docs/: KEY_ROTATION.md  SECURITY_MODEL.md  agent-loop.md  agents.md  architecture.md  bootstrap.md  cost.md  observability.md  ownership.md  research.md  runs.md
examples/: 01_sft_helpfulness.md  02_grpo_math.md  03_concurrent_sweep.md
frontend/: .env.example  README.md  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
mcp_server/: README.md  pyproject.toml
mcp_server/stellarator_mcp/: __init__.py  client.py  config.py  server.py
mcp_server/tests/: test_client.py  test_config.py
supervisor/: Cargo.toml
supervisor/src/: api.rs  config.rs  cost.rs  db.rs  lib.rs  main.rs  schema_check.rs  state.rs  supervisor.rs  tinker.rs  ws.rs
supervisor/tests/: auth_test.rs  cost_test.rs  idempotency_test.rs  lifecycle_test.rs  sse_test.rs
(+140 files in other folders)
