[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellarator-mcp"
version = "0.1.0"
description = "MCP server for driving Stellarator Tinker fine-tuning runs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.scripts]
stellarator-mcp = "stellarator_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["stellarator_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
