[package]
name = "stellarator-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-util = { version = "0.7", features = ["rt"] }
# NOTE: `migrate` feature is intentionally NOT enabled — Python (Alembic) owns schema migrations.
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["trace"] }
tower = "0.4"
subtle = "2.6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "stellarator-supervisor"
path = "src/main.rs"

[lib]
name = "stellarator_supervisor"
path = "src/lib.rs"
